--- a/docker/kcpdante/Dockerfile
+++ b/docker/kcpdante/Dockerfile
@@ -1,5 +1,5 @@
 # docker build -t kcpdante .
-# docker build -t kcpdante --build-arg=HTTP_PROXY=http://192.168.35.3:8118/ .
+# docker build -t kcpdante --build-arg=HTTP_PROXY=http://192.168.35.3:8118/ --build-arg=HTTPS_PROXY=http://192.168.35.3:8118/ .
 # docker run -it --rm -p 22000:21000/udp kcpdante
 
 FROM kcptun:latest
@@ -7,10 +7,12 @@ MAINTAINER Wang Jie <twj31470952@gmail.com>
 
 RUN set -xe; \
     echo "@testing http://nl.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories; \
-    apk --update add --no-cache dante-server@testing;
+    apk --update add --no-cache dante-server@testing; \
+    mkdir -p /etc/kcptun
 
 COPY sockd.conf /etc/sockd.conf
-COPY entrypoint.sh /entrypoint.sh 
+COPY entrypoint.sh /entrypoint.sh
+COPY kcptun-socks5.json /etc/kcptun/kcptun-socks5.json
    
 EXPOSE 22000/udp
 
